eventkit_cloud/ui/static/ui/app/styles/ol3map.css
div.map {
    position: absolute;
    margin-top: 0px;
    margin-left: 0px;
    bottom: 0px;
    height: calc(100% - 180px);
}

.draw {
    top: 125px;
    left: 40px;
}
.olScaleLine {
    position: absolute;
    padding: 2px;
    background: rgba(0,0,0,0);
    border-radius: 4px;
    bottom: 10px;
    right: 10px;
}

.olScaleLine > div {
    color: #707274;
    border: 1px solid #707274;
    border-top: none;
    font-size: 10px;
    text-align: center;
    margin: 1px;
    will-change: contents,width;
}

.olZoom {
    z-index: 3;
    top: 50px;
    left: 10px;
    color: #66a3ff;
    background-color: white;
}

.olZoomSlider {
    z-index: 3;
    top: 108px;
    left: 10px;
    height: 200px;
    color: #66a3ff;
    background-color: white;
}

.olZoomSlider button {
    position: relative;
    height: 15px;

    /* Fix issue where slider button scrolls down too far */
    transform: scaleY(0.75);
    transform-origin: top center;
}

.olControlTopLeft {
    top: 15px !important;
    left: 10px !important;
}

.olZoomToExtent {
    z-index: 3;
    top: 15px;
    left: 10px;
    color: #66a3ff;
    background-color: white;   
}

.olZoomToExtent button {
    color: #4498c0;
    background-color: white;
    outline: none;
    height: 22px;
    width: 22px;
}

.olZoom button {
    color: #4498c0;
    background-color: white;
    outline: none;
    height: 22px;
    width: 22px;
}

.olZoomToExtent button i {
    font-size: 16px;
}

.olZoom button i {
    font-size: 16px;
}

.olZoomToExtent button:hover {
    background-color: white;
}

.olZoom button:hover {
    background-color: white;
}

.olZoomToExtent button:focus {
    background-color: white;
}

.olZoom button:focus {
    background-color: white;
}

.olZoomLevel {
    z-index: 3;
    position: absolute;
    bottom: 38px;
    right: 12px;
    color: #707274;
    font-size: 10px;
}

.olPopup {
    position: absolute;
    background-color: white;
    -webkit-filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
    filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
    padding: 15px;
    border-radius: 2px;
    border: 1px solid #cccccc;
    bottom: 12px;
    left: -50px;
    min-width: 150px;
}
.olPopup:after, .olPopup:before {
    top: 100%;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none;
}
.olPopup:after {
    border-top-color: white;
    border-width: 10px;
    left: 48px;
    margin-left: -10px;
}
.olPopup:before {
    border-top-color: #cccccc;
    border-width: 11px;
    left: 48px;
    margin-left: -11px;
}
.olPopupCloser {
    text-decoration: none;
    position: absolute;
    top: 2px;
    right: 8px;
}
.olPopupCloser:after {
    content: "✖";
}

.ol-custom-overviewmap:not(.ol-collapsed) {
    left: 10px;
    right: initial;
    bottom: 25px;
}

.ol-custom-overviewmap:not(.ol-collapsed) > div {
    border: none;
    width: 100px;
    height: 100px;
}

.ol-custom-overviewmap:not(.ol-collapsed) button {
    left: 2px;
}

.ol-attribution > ul > li {
    pointer-events: none !important;
}

